--- a/assessriskcont.html
+++ b/assessriskcont.html
@@ -104,7 +104,7 @@ $('#calculate').live("click",function()
         cannot be changed.</p>
         <div class="ui-block-a"><a href="assessriskcont.html#nonmodrisk" data-role="button" rel="external" id="riskbtn">Non-modifiable risk factors</a></div>
         <div class="clear"> </div>
-        <div class="ui-block-a"><a href="assessriskcont.html#modrisk" data-role="button" rel="external" id="riskbtn">Modifiable risk factors </a></div>
+        <div class="ui-block-a"><a href="assessriskcont.html#modrisk1" data-role="button" rel="external" id="riskbtn">Modifiable risk factors </a></div>
       </div>
     <div class="clear"> </div>
     <div class="bottomnav">
