--- a/findcenter.html
+++ b/findcenter.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="jquery.mobile-1.1.0.min.css" />
 <link rel="stylesheet" href="jquery-ui.css" />
-<link rel="stylesheet" href="jquery.mobile.simpledialog.min.css" />
 <link rel="stylesheet" href="style.css" />
 <link href="gsearch.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-1.9.1.js"></script>
@@ -69,9 +68,12 @@ $('#donebtn').live("click",function()
     </select>
     <div id="map" style="height:500px; width:90%; border: 1px solid #979797; margin:10px;"></div>
     <div id="searchwell"> </div>
+    
+<div class="clear"> </div>
+<footer id="footer"> </footer>
   </div>
 </div>
-<footer id="footer"> </footer>
+
 </div>
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
