--- a/updates.html
+++ b/updates.html
@@ -56,8 +56,8 @@ $('#donebtn').live("click",function()
           <div id="progress" class="progress70"> <!--<img src="70-trans.png"  class="centerimg"/>--> 
             <!-- change this to 'progressXX' to change the progress bar (where XX is either 10, 20, 30... 100) --> 
           </div>
-          <p id="completion">It's about 70% complete!</p>
-          <!-- change this to state the % completed --> 
+          <!--   <p id="completion">It's about 70% complete!</p>
+        change this to state the % completed --> 
         </div>
         <!-- end main --> 
         
