--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ if(result==true)
 				var email=document.getElementById('emailid').value;
 				var phno=document.getElementById('phnumber').value;
 			//alert(email+phno);
-			  $.post("http://www.mobiletest.mednl.com/sendnewsletter.php",{data:{email:email,phno:phno}}).done(function(data){
+	  $.post("http://www.mobiletest.bqhost.in/sendnewsletter.php",{data:{email:email,phno:phno}}).done(function(data){
 				
 				   });
 			  alert("You Have subscribed successfully");
@@ -85,7 +85,7 @@ $(document).bind("mobileinit", function () {
 $.mobile.defaultPageTransition = 'none';
 });
 </script>
-
+</head>
 <body>
 <div id="dialog">
   <form method="post" enctype="text/plain" id="subscribeform" onsubmit="return validateForm()" >
