--- a/findcenter.html
+++ b/findcenter.html
@@ -445,8 +445,8 @@ $(document).ready(function(e) {
 				});
 				 
 						}
-   //   var query = "radiology,"+document.getElementById("queryInput").value+",india";
-	 var query = "radiology";
+      var query = "radiology,"+document.getElementById("queryInput").value+",india";
+	 // var query = "radiology";
       gLocalSearch.setCenterPoint(val);
       gLocalSearch.execute(query);
 	  			//	alert(gLocalSearch.length);
