--- a/updates.html
+++ b/updates.html
@@ -37,30 +37,11 @@ $('#donebtn').live("click",function()
         </div>
       </div>
       <div id="main-content">
-        <div id="main"> <!-- start main -->
-          <div id="message"> <!-- start message --> 
-            <img src="sorry.png" alt="Sorry!" id="sorry" width="80%" />
-            <p>Our App is currently under construction.</p>
-            <!-- you can enter your own customised message here -->
-            <p>We'll be done soon!</p>
-          </div>
-          <!-- end message -->
-          <div id="tweet_wrap">
-            <div id="tweet"> <!-- start tweet -->
-              <p> <img src="loading.gif" alt="loading..." class="loading centerimg"/> </p>
-            </div>
-            <!-- end tweet --> 
-          </div>
-          
-          <!-- end tweet_wrap -->
-          <div id="progress" class="progress70"> <!--<img src="70-trans.png"  class="centerimg"/>--> 
-            <!-- change this to 'progressXX' to change the progress bar (where XX is either 10, 20, 30... 100) --> 
-          </div>
-          <!--   <p id="completion">It's about 70% complete!</p>
-        change this to state the % completed --> 
-        </div>
-        <!-- end main --> 
-        
+       <!-- start main -->
+	<p> LAUNCHING Indian breast cancer resource at Indian Cancer Congress 2013 in Delhi. 
+    This initiative will help collate data about Indian breast cancer patients so that 
+    the developmental research in future is our country specific. 
+    A lot of renowned oncologists from the country will be a part of this launch.  </p>                   
       </div>
     </div>
     <div class="clear"> </div>
