--- a/updates.html
+++ b/updates.html
@@ -38,10 +38,9 @@ $('#donebtn').live("click",function()
       </div>
       <div id="main-content">
        <!-- start main -->
-	<p> LAUNCHING Indian breast cancer resource at Indian Cancer Congress 2013 in Delhi. 
-    This initiative will help collate data about Indian breast cancer patients so that 
-    the developmental research in future is our country specific. 
-    A lot of renowned oncologists from the country will be a part of this launch.  </p>                   
+	<p> General cancer screening camp will be organized by Balaji Prachar Mandal in association with Chandigarh cancer and Diagnostic centre in presence of Dr. Jatin Sarin's (Medical Oncologist). </p>                   
+     <p> <b>Date and Time:</b> 17th march 2014 from 4 to 7 pm </p>
+    <p> <b>Venue: </b>Pracheen Hanuman Mandir, Sector-32A, Chandigarh </p>
       </div>
     </div>
     <div class="clear"> </div>
