--- a/updates.html
+++ b/updates.html
@@ -21,30 +21,49 @@ $('#donebtn').live("click",function()
   </head>
   <body>
   <article id="selfcheck1" data-role="page">
-    <div data-role="content">
-      <div id="header">
-        <div id="titleheader"> 
-          <!-- <div id="headertext"> </div>-->
-          <table id="wrapper">
-            <tr>
-              <td> <!--<img src="remindertext.png" />--> Updates</td>
-            </tr>
-          </table>
-        </div>
-        <div class="clear"> </div>
-        <div id="btmheader">
-          <button id="donebtn"> </button>
-        </div>
-      </div>
-      <div id="main-content">
-       <!-- start main -->
-	<p> General cancer screening camp will be organized by Balaji Prachar Mandal in association with Chandigarh cancer and Diagnostic centre in presence of Dr. Jatin Sarin's (Medical Oncologist). </p>                   
-     <p> <b>Date and Time:</b> 17th march 2014 from 4 to 7 pm </p>
-    <p> <b>Venue: </b>Pracheen Hanuman Mandir, Sector-32A, Chandigarh </p>
-      </div>
+   <div data-role="content">
+    <div id="header">
+     <div id="titleheader">
+      <!-- <div id="headertext"> </div>-->
+      <table id="wrapper">
+       <tr>
+        <td><!--<img src="remindertext.png" />--> Updates</td>
+       </tr>
+      </table>
+     </div>
+     <div class="clear">
+     </div>
+     <div id="btmheader">
+      <button id="donebtn">
+      </button>
+     </div>
     </div>
-    <div class="clear"> </div>
-    <footer id="footer"> </footer>
+    <div id="main-content">
+     <!-- start main -->
+     <p>
+      <b> Maharani Club, Khanna (Punjab) </b></p>
+     <p>
+      <b>Topic:</b>Breast Cancer Awareness Lecture
+     </p>
+     <p>
+      <b>By:</b>
+     <ul>
+      <li>Dr. Jatin Sarin, Medical Oncologist, Ivy Hospital Mohal & Chnadigarh Cancer and Diagnostic Centre </li>
+      <li> Dr. Vijay Bansal, Onco-Surgeon, Ivy Hospital, Mohali</li>
+     </ul>
+     <p></p>
+     <p>
+      <b>Venue: </b>Golden Grain Club, Bullepur Khanna (Punjab)</p>
+     <p>
+      <b>Time:</b> 4:30 - 5:30 PM</p>
+     <p>
+      <b>Date:</b> 29<sup>th</sup> May 2014</p>
+    </div>
+   </div>
+   <div class="clear">
+   </div>
+   <footer id="footer">
+   </footer>
   </article>
 </body>
 </html>
